--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
   background-color: #333;
 }
 
@@ -95,6 +95,7 @@ body {
  */
 .cover {
   padding: 0 1.5rem;
+  margin: auto;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
