--- a/css/main.css
+++ b/css/main.css
@@ -8,22 +8,26 @@ body {
 }
 
 
-img.profile {
+.profile {
   border: 3px solid white;
   border-radius: 50%;
   box-shadow: 5px 5px 2px rgba(0,0,0,0.7);
   margin: 5px;
   margin-right: 15px;
   width: 250px;
-  display: inline-block;
+  height: 250px;
+  background-image: url('https://i.imgur.com/m7Lkrno.png');
+  background-size: cover;
   float: left;
+  background-position: center;
 }
 
 @media only screen and (max-width: 768px) {
   /* for mobile phones and small screens */
-  img.profile {
+  .profile {
     margin: 15px;
     width: 125px;
+    height: 125px;
   }
 }
 
