--- a/css/main.css
+++ b/css/main.css
@@ -82,3 +82,8 @@ body {
 .full-vh {
   min-height: 100vh !important;
 }
+
+.define {
+  color: rgb(58, 163, 255);
+  text-shadow: 1px 1px 2px black; 
+}
